@@ -513,7 +513,7 @@ Returns ORAC__OK on completion.
 sub parse {
   my $self = shift;
   my $PRIMITIVE_LIST = shift;
-  
+
   # The recipe has to be parsed recursively.
   # To do that we need to make use of a helper routine that 
   # can process the current recipe chunk and check for recursion depth
@@ -782,15 +782,15 @@ sub _check_obey_status_string {
   # Do the regexp separately so that we can handle the situation
   # where the monolith path is not stored in a hash
   $line =~ /\{\s*[\'\"]*(\w+)[\'\"]*\s*\}->obeyw/ && ($monolith = $1);
-  $line =~ /->obeyw\(\"(\w+)\"/ && ($task = $1);
-  $line =~ /->obeyw\(\"\w+\"\s*,\s*\"(.+)\"/ && ($args = $1);
+  $line =~ /->obeyw\(\s*\"(\w+)\"/ && ($task = $1);
+  $line =~ /->obeyw\(\s*\"\w+\"\s*,\s*\"(.+)\"/ && ($args = $1);
   $args = '(No arguments)' unless defined $args;
   my $none = "(None!!)";
   $monolith = $none unless defined $monolith;
-  $task = '(Unknown)' unless defined $task;  
+  $task = '(Unknown)' unless defined $task;
 
   # Need to be careful of what gets expanded when the
-  # lines are added to the recipe and what gets expanded 
+  # lines are added to the recipe and what gets expanded
   # when the recipe is executed.
 
   my @statuslines = (
@@ -801,7 +801,7 @@ sub _check_obey_status_string {
                      '  orac_print("$obeyw_args\n\n","red"); '
 		    );
 
-  # If we have been unable to determine the monolith name we can not 
+  # If we have been unable to determine the monolith name we can not
   # add the following - could use splice rather than to pushes
   if ($monolith ne $none) {
     push (@statuslines,
@@ -915,7 +915,6 @@ sub _parse_recursively {
       # Now recurse to read parse the primitive for more primitives
       $lines_ref = $self->_parse_recursively($lines_ref, $depth);
 
-      
       # Store lines - making sure we DO NOT create a separate scope
       # for the $$CURRENT_PRIMITIVE variable
       push(@parsed,
@@ -928,7 +927,7 @@ sub _parse_recursively {
       # push top level primitivies into the primitive list
       if ( defined $PRIMITIVE_LIST && ref($PRIMITIVE_LIST) ) {
          push( @$PRIMITIVE_LIST, $primitive_name ); }
-      
+
     } else {
       # Just push the line on as is
       push (@parsed, $line);
