@@ -1,5 +1,8 @@
 2001-03-20  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Recipe.pm (_check_obey_status_string): Fix pattern match for
+	task name
+
 	* Frame/CGS4.pm (findnsubs): Use more intelligence when searching
 	for .I components
 
